<resources>
    <string name="app_name">WaterBuddy</string>

    <string name="main_menu_home">홈</string>
    <string name="main_menu_analytics">통계</string>
    <string name="main_menu_mypage">설정</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="targetAmountStrFormat" formatted="false">%skg ・ %scm &#160;| &#160;%sL</string>
    <string name="edtLenCntFormat" formatted="false">%d&#47;6</string>
    <string name="appwidget_text">100ml / 1L </string>
    <string name="add_widget">Add widget</string>
    <string name="day_sun">일</string>
    <string name="day_mon">월</string>
    <string name="day_tue">화</string>
    <string name="day_wed">수</string>
    <string name="day_thu">목</string>
    <string name="day_fri">금</string>
    <string name="day_sat">토</string>

    <string name="analytics_header_title">%d월 수분 섭취</string>

    <string name="analytics_header_daily">일별 수분 섭취량</string>
    <string name="daily_sys_none_water">마신 음료가\n없는 날이에요 :(</string>
    <string name="daily_sys_max_drink">%s(을)를 가장\n많이 마셨어요</string>
    <string name="daily_none_water_1">마신 물이 없어요!</string>
    <string name="daily_none_water_2">하루 권장량을 꼭 마셔주세요!</string>
    <string name="daily_item_percent">%.1f</string>
    <string name="daily_date">%d일</string>

    <string name="analytics_weekly_header1">요일별 수분 섭취량</string>
    <string name="analytics_weekly_header2">주간 수분 섭취량</string>
    <string name="weekly_chart_y_format">%.1fL</string>
    <string name="weekly_picker_item">%d주</string>
    <string name="weekly_month_week">%d월 %d주</string>
    <string name="limit_line_target">목표\n%.1fL</string>
    <string name="weekly_sys_none">수분을 섭취해 볼까요?</string>
    <string name="weekly_sys_minus">저번 주보다 평균 수분 섭취량이\n%dml 줄었어요</string>
    <string name="weekly_sys_plus">저번 주보다 평균 수분 섭취량이\n%dml 늘었어요</string>

    <string name="target_amount">%sml</string>
    <string name="nickname_change">닉네임 변경이 완료되었어요.</string>
    <string name="favorite_drink_add">자주 마시는 음료로 등록했어요.\n홈에서 음료를 빠르게 추가해보아요.</string>
    <string name="favorite_drink_full">자주 마시는 음료는\n최대 2개까지만 등록할 수 있어요.</string>

    <string name="intro_main_description">매일매일 \n필요한 수분으로 \n채워보세요.</string>
    <string name="intro_second_description1">사용할 닉네임을\n알려주세요.</string>
    <string name="intro_second_description2">닉네임은 언제든지 변경할 수 있어요.</string>
    <string name="intro_second_inputhint">최대 6자 입력 </string>
    <string name="intro_second_textcount">/6자 </string>
    <string name="intro_third_description1">키와 몸무게를\n알려주세요.</string>
    <string name="intro_third_description2">하루 목표 섭취량을 계산 해드릴게요.</string>
    <string name="intro_third_kghint"> kg 없이 입력 </string>
    <string name="intro_third_kg"> 체중 (kg) </string>
    <string name="intro_third_height"> 키 (cm) </string>
    <string name="intro_third_heighthint"> cm 없이 입력 </string>
    <string name="intro_fourth_welcome1">환영합니다!</string>
    <string name="intro_fourth_welcome2">" 님의"</string>
    <string name="intro_fourth_welcome3">하루 목표 수분 섭취량은</string>
    <string name="intro_fourth_welcome4">" 입니다."</string>
    <string name="intro_fourth_welcome5">캐릭터 워비와 함께 </string>
    <string name="intro_fourth_welcome6">목표를 달성 보아요. </string>
    <string name="intro_main_btn">시작하기</string>
    <string name="intro_second_btn">다음 1/2</string>
    <string name="intro_third_btn">다음 2/2</string>
    <string name="intro_fourth_btn">확인</string>
    <string name="intro_onboarding1">매일 마시는\n다양한 수분을\n기록해보세요.</string>
    <string name="intro_onboarding2">지금까지 마신\n수분을 통계로\n확인할 수 있답니다.</string>
    <string name="intro_onboarding3">캐릭터 워비와 함께\n하루 목표 수분 섭취량을\n달성해보아요.</string>

    <string name="month_header">월별 수분 섭취량</string>
    <string name="month_sys_text">%d일중 %d번 목표 수분 섭취 달성</string>
    <string name="month_header_rank">음료 순위</string>
    <string name="month_header_unit">잔당 200ml</string>
    <string name="month_btn_load_more">전체보기</string>
    <string name="month_btn_load_close">접기</string>
    <string name="month_rank_none">음료 순위가 없어요</string>
    <string name="month_rank_none_sub">매일 권장 수분을 섭취하고 기록을 달성해보세요!</string>
    <string name="month_unit">%d잔</string>
    <string name="month_bottom_header">월 선택하기</string>
    <string name="month_select">%d년 %d월</string>

    <string name="alarm_time">%s : %s</string>
    <string name="alarm_interval_time">%s시간</string>

    <string name="polite_name">%s님\n</string>

    <string name="confrim">선택</string>

    <string name="calendar_header">날짜 선택하기</string>
    <string name="calendar_year_month">%d년 %d월</string>

    <string name="fab_favorite">%s %dml</string>

    <string name="modify_modal">음료 정보 수정</string>
    <string name="add_fav_modal">자주 마시는 음료</string>
    <string name="insert_toast_text">%s %dml를 추가했습니다.</string>
    <string name="delete_toast_text">%d개의 내역을 삭제하였습니다.</string>
    <string name="modify_toast_text">%s %dml로 수정하였습니다.</string>

    <string name="step1">step 1.</string>
    <string name="step2">step 2.</string>
    <string name="tutorial_explain_1">하단의 추가 버튼을 눌러\n마신 음료를 등록해보세요!</string>
    <string name="tutorial_explain_2">하단의 설정에서 자주 마시는 음료를\n등록하고, 홈에서 빠르게 추가해보세요.</string>
    <string name="tutorial_add_intake">음료 추가하기</string>
    <string name="tutorial_add_directly">직접 추가하기</string>
    <string name="tutorial_water">물 250ml</string>
</resources>
