<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="introViewModel"
            type="appvian.water.buddy.viewmodel.IntroViewModel" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.Intro.IntroThirdFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/intro_third_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/intro_third_description1"
                android:textSize="22sp"
                android:textColor="#000000"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />
            <TextView
                android:id="@+id/intro_third_description2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_third_description2"
                android:textSize="13sp"
                android:layout_marginTop="13dp"
                android:layout_marginStart="35dp"
                app:layout_constraintTop_toBottomOf="@+id/intro_third_main"
                app:layout_constraintLeft_toLeftOf="parent"
                />
            <TextView
                android:id="@+id/intro_kg_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_third_kg"
                android:textSize="13sp"
                android:textColor="#000000"
                android:layout_marginTop="45dp"
                android:layout_marginStart="35dp"
                app:layout_constraintTop_toBottomOf="@+id/intro_third_description2"
                app:layout_constraintLeft_toLeftOf="parent"
                />
            <EditText
                android:id="@+id/kg_edittext"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginStart="35dp"
                android:maxLength="3"
                android:textSize="18sp"
                android:hint="@string/intro_third_kghint"
                app:layout_constraintTop_toBottomOf="@+id/intro_kg_text"
                app:layout_constraintLeft_toLeftOf="parent"
                />
            <TextView
                android:id="@+id/intro_cm_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_third_height"
                android:textSize="13sp"
                android:textColor="#000000"
                android:layout_marginTop="32dp"
                android:layout_marginStart="35dp"
                app:layout_constraintTop_toBottomOf="@+id/kg_edittext"
                app:layout_constraintLeft_toLeftOf="parent"
                />
            <EditText
                android:id="@+id/height_edittext"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginStart="35dp"
                android:textSize="18sp"
                android:maxLength="3"
                android:hint="@string/intro_third_heighthint"
                app:layout_constraintTop_toBottomOf="@+id/intro_cm_text"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <Button
                android:id="@+id/nextbtn2"
                android:layout_width="360dp"
                android:layout_height="52dp"
                android:background="@drawable/radius"
                android:text="@string/intro_third_btn"
                android:textColor="@color/White"
                android:layout_marginBottom="24dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>