<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/month_toolbar"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:fitsSystemWindows="true"
            android:background="@color/blue_1"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue_1"
                    app:layout_collapseMode="none">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month_header"
                        android:layout_marginTop="@dimen/daily_common_spacing"
                        android:layout_marginStart="32dp"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:lineSpacingExtra="26sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/month_front_mark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_quotation_mark_front"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="98dp"
                        android:tint="@color/mark_color"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/month_sys_tv" />

                    <TextView
                        android:id="@+id/month_sys_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month_sys_text"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:layout_marginTop="97dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/month_front_mark"
                        app:layout_constraintEnd_toStartOf="@id/month_end_mark" />

                    <ImageView
                        android:id="@+id/month_end_mark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_quotation_mark_back"
                        android:tint="@color/mark_color"
                        android:layout_marginEnd="47dp"
                        android:layout_marginTop="98dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/month_header_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/month_header_rank"
                    android:textSize="18sp"
                    android:lineSpacingExtra="26sp"
                    android:layout_marginTop="@dimen/daily_common_spacing"
                    android:layout_marginStart="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/month_header_unit"
                    android:textSize="12sp"
                    android:textColor="@color/grey_8"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="44dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/month_rank_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/daily_common_spacing"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/month_header_rank"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_month_intake"/>

                <Button
                    android:id="@+id/month_load_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/daily_common_spacing"
                    android:layout_marginEnd="@dimen/daily_common_spacing"
                    android:layout_marginTop="219dp"
                    android:text="@string/month_btn_load_more"
                    android:textSize="13sp"
                    android:textColor="@color/grey_8"
                    android:background="@drawable/btn_load_more"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="?android:attr/borderlessButtonStyle"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/month_none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/month_header_rank">
                    
                    <ImageView
                        android:id="@+id/none_water_iv"
                        android:layout_width="58dp"
                        android:layout_height="58dp"
                        android:src="@mipmap/no_water_grey_icon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month_rank_none"
                        android:textSize="15sp"
                        android:lineSpacingExtra="20sp"
                        android:textColor="@color/grey_7"
                        android:layout_marginTop="6dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/none_water_iv" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month_rank_none_sub"
                        android:textColor="@color/grey_7"
                        android:textSize="13sp"
                        android:lineSpacingExtra="18sp"
                        android:layout_marginTop="28dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/none_water_iv"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>